<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#e3e3e3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.njabreu.miprimerformulario.MainActivity"
    android:orientation="vertical">

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre_completo"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto_datepicker_fecha_nacimiento"
            android:focusable="false"
            android:onClick="showDatePickerDialog"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:enabled="true"
            android:focusable="true"
            android:layout_below="@+id/etNombreCompleto"
            android:hint="@string/hint_telefono"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:enabled="true"
            android:focusable="true"
            android:layout_below="@+id/etTelefono"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etDescripcionContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:enabled="true"
            android:focusable="true"
            android:hint="@string/hint_descripcion_contacto"
            android:layout_below="@+id/etEmail"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_siguiente"
        android:id="@+id/button"
        android:clickable="true"
        android:layout_gravity="bottom|center_horizontal"
        android:onClick="showConfirmarDatos"
        />

</LinearLayout>
